--- a/server/package.json
+++ b/server/package.json
@@ -5,17 +5,27 @@
 	"main": "src/server.js",
 	"scripts": {
 		"build": "tsc",
-		"dev": "tsnd src/server.ts"
+		"dev": "tsnd --exit-child src/server.ts"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@prisma/client": "^4.3.1",
+		"cors": "^2.8.5",
 		"express": "^4.18.1"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/node": "^18.7.17",
+		"@typescript-eslint/eslint-plugin": "^5.37.0",
+		"@typescript-eslint/parser": "^5.37.0",
+		"eslint": "^8.23.1",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"prettier": "^2.7.1",
+		"prisma": "^4.3.1",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^4.8.3"
 	}
